/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";
package scow.server;

import "google/protobuf/timestamp.proto";

import "common/money.proto";

message PayRequest {
  common.Money amount = 1;
  string operator_id = 2;
  string tenant_name = 3;
  // if account_name is not set, pay the tenant
  optional string account_name = 4;
  string type = 5;
  string comment = 6;
  string ip_address = 7;
}

message PayReply {
  common.Money previous_balance = 1;
  common.Money current_balance = 2;
}

message GetBalanceRequest {
  string tenant_name = 1;
  optional string account_name = 2;
}

message GetBalanceReply {
  common.Money balance = 1;
}

message ChargeRequest {
  string tenant_name = 1;
  // if account_name is not set, pay the tenant
  optional string account_name = 2;
  common.Money amount = 3;
  string type = 4;
  string comment = 5;
}

message ChargeReply {
  common.Money previous_balance = 1;
  common.Money current_balance = 2;
}

message ChargeRecord {
  uint64 index = 1;
  string tenant_name = 2;
  optional string account_name = 3;
  google.protobuf.Timestamp time = 4;
  string type = 5;
  common.Money amount = 6;
  string comment = 7;
}

// If account_name is set, return records of the account, ignoring tenant_name.
// If account_name is not set and tenant_name is set, return records of the
// tenant. If none is set, return all
message GetChargeRecordsRequest {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
  optional string tenant_name = 3;
  optional string account_name = 4;
}

message GetChargeRecordsReply {
  repeated ChargeRecord results = 1;
  optional common.Money total = 2;
}

message PaymentRecord {
  uint64 index = 1;
  string tenant_name = 2;
  optional string account_name = 3;
  google.protobuf.Timestamp time = 4;
  string type = 5;
  common.Money amount = 6;
  string comment = 7;
  string ip_address = 8;
  string operator_id = 9;
}

// If account_name is set, return records of the account, ignoring tenant_name.
// If account_name is not set and tenant_name is set, return records of the
// tenant. If none is set, return all
message GetPaymentRecordsRequest {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
  optional string tenant_name = 3;
  optional string account_name = 4;
}

message GetPaymentRecordsReply {
  repeated PaymentRecord results = 1;
  optional common.Money total = 2;
}

message GetAllPayTypesRequest {
}

message GetAllPayTypesReply {
  repeated string types = 1;
}

service ChargingService {
  // NotFound: account is not found.
  rpc Pay(PayRequest) returns (PayReply);

  rpc GetAllPayTypes(GetAllPayTypesRequest) returns (GetAllPayTypesReply);

  // NotFound: account is not found.
  rpc Charge(ChargeRequest) returns (ChargeReply);

  // NotFound: account or tenant is not found.
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceReply);

  rpc GetPaymentRecords(GetPaymentRecordsRequest)
      returns (GetPaymentRecordsReply);
  rpc GetChargeRecords(GetChargeRecordsRequest) returns (GetChargeRecordsReply);
}
